--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,9 @@
+* {
+  margin: 0;
+  padding: 0;
+}
 .App {
-  background-color: rgb(216, 236, 236);
+  background-color: rgb(30, 34, 34);
 }
 
 img {
@@ -23,7 +27,7 @@ img {
   font-size: larger;
 }
 .sear:hover {
-  background-color: #51b9b6;
+  background-color: #959599;
 }
 
 .AddBtn {
@@ -39,12 +43,12 @@ img {
   border-radius: 10px;
 }
 .AddBtn:hover {
-  background-color: #51b9b6;
+  background-color: #959599;
 }
 
 .card {
-  width: 1700px;
-  height: 400px;
+  width: 1500px;
+  height: 600px;
   background: transparent;
   margin: 40px 0;
   border-radius: 5px;
@@ -70,7 +74,7 @@ img {
 .card_right {
   width: 60%;
   float: left;
-  background: #407a78;
+  background: #959599;
   height: 400px;
   border-radius: 40px;
 }
@@ -102,7 +106,7 @@ li {
 }
 
 .card_right__review p {
-  color: rgb(180, 220, 221);
+  color: rgb(224, 226, 226);
   font-family: "Montserrat", sans-serif;
   font-size: 19px;
   padding: 30px 40px 0 40px;
@@ -116,7 +120,6 @@ li {
   width: 400px;
   margin-left: 850px;
   padding: 20px;
-  background-color: #def2f1;
 }
 #block {
   display: flex;
@@ -125,11 +128,43 @@ li {
 .Modal-btn {
   height: 40px;
   width: 190px;
-  background-color: azure;
 }
 .Modal-btn:hover {
-  background-color: #51b9b6;
+  background-color: #959599;
 }
 label {
   font-size: medium;
+}
+.btns {
+  background-color: black;
+  border: transparent;
+  color: white;
+  font-size: 30px;
+
+  cursor: pointer;
+  width: 130px;
+  height: 70px;
+  border-radius: 10px;
+}
+.btns:hover {
+  background-color: #959599;
+}
+.des {
+  color: #e3e3e3;
+  text-decoration: none;
+  font-size: 30px;
+  display: flex;
+  margin-left: 30px;
+}
+.videos {
+  display: flex;
+  justify-content: center;
+  border-radius: 20px;
+  margin-left: 500px;
+  margin-top: 100px;
+}
+.moviedes {
+  color: #e3e3e3;
+  font-size: xx-large;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
 }
