--- a/src/App.css
+++ b/src/App.css
@@ -11,8 +11,9 @@ img {
   height: 470px;
 }
 .rateSerch {
-  font-size: 40px;
+  font-size: 50px;
   color: #fae100;
+  margin-left: 20px;
 }
 .searchC {
   display: flex;
@@ -22,8 +23,8 @@ img {
 
 .sear {
   border-radius: 500px;
-  width: 400px;
-  height: 40px;
+  width: 600px;
+  height: 60px;
   font-size: larger;
 }
 .sear:hover {
@@ -47,14 +48,22 @@ img {
 }
 
 .card {
-  width: 1500px;
-  height: 600px;
+  width: 1200px;
+  height: 400px;
   background: transparent;
+  padding-left: 400px;
   margin: 40px 0;
-  border-radius: 5px;
-  justify-items: center;
+  border-radius: 10px;
+  -webkit-border-radius: 10px;
+  -moz-border-radius: 10px;
+  box-shadow: 0px 20px 30px 3px rgba(187, 167, 167, 0.2);
+  transform: scale(0.95);
+  transition: all 0.5s;
 }
-
+.card:hover {
+  transform: scale(1);
+  box-shadow: 0 5px 10px -12.125px rgba(0, 0, 0, 0.2);
+}
 .card_left {
   width: 40%;
   height: 400px;
@@ -155,6 +164,9 @@ label {
   font-size: 30px;
   display: flex;
   margin-left: 30px;
+}
+.des:hover {
+  color: #fae100;
 }
 .videos {
   display: flex;
